--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html dir="rtl">
+<html dir="rtl" lang="ku">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/myLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Meta Tags -->
     <title>فرۆشگای کەیفی</title>
+    <meta
+      name="description"
+      content="فرۆشگای کەیفی بۆ فرۆشتنی باشترین کاڵاکان بە نرخێکی گونجاو. سەردانمان بکەن بۆ ئەزموونێکی کڕینی ناوازە."
+    />
+    <meta
+      name="keywords"
+      content="کەیفی, فرۆشگا, کڕین, ئۆنڵاین, جلوبەرگ, کاڵا, kurdish, online shop"
+    />
+
+    <!-- Open Graph Meta Tags (بۆ سۆشیاڵ میدیا وەک فەیسبووک) -->
+    <meta property="og:title" content="فرۆشگای کەیفی" />
+    <meta
+      property="og:description"
+      content="فرۆشگای کەیفی بۆ فرۆشتنی باشترین کاڵاکان بە نرخێکی گونجاو."
+    />
+    <meta property="og:image" content="/myLogo.svg" />
+    <meta property="og:url" content="https://www.kayfistore.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags (بۆ تویتەر) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="فرۆشگای کەیفی" />
+    <meta
+      name="twitter:description"
+      content="فرۆشگای کەیفی بۆ فرۆشتنی باشترین کاڵاکان بە نرخێکی گونجاو."
+    />
+    <meta name="twitter:image" content="/myLogo.svg" />
   </head>
   <body>
     <div id="root"></div>
